openshift/50-nd-mcp-server/route-nd-mcp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nd-mcp-server
    app.kubernetes.io/part-of: gbaia
  name: gbaia-nd-mcp
spec:
  port:
    targetPort: https
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: gbaia-nd-mcp-server
    weight: 100
